Fix: fixed the overflowing slider banner

--- a/style.css
+++ b/style.css
@@ -430,18 +430,18 @@ textarea {
 
 input::-moz-placeholder, textarea::-moz-placeholder {
   opacity: 1;
-  color: #9ca3af;
+  color: #a3a3a3;
 }
 
 input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   opacity: 1;
-  color: #9ca3af;
+  color: #a3a3a3;
 }
 
 input::placeholder,
 textarea::placeholder {
   opacity: 1;
-  color: #9ca3af;
+  color: #a3a3a3;
 }
 
 button,
@@ -573,6 +573,9 @@ video {
 .fixed {
 	position: fixed;
 }
+.\!relative {
+	position: relative !important;
+}
 .left-\[17px\] {
 	left: 17px;
 }
@@ -611,6 +614,12 @@ video {
 }
 .bottom-0 {
 	bottom: 0px;
+}
+.\!left-0 {
+	left: 0px !important;
+}
+.\!bottom-0 {
+	bottom: 0px !important;
 }
 .z-20 {
 	z-index: 20;
@@ -653,14 +662,6 @@ video {
 	margin-top: 10px;
 	margin-bottom: 10px;
 }
-.my-4 {
-	margin-top: 1rem;
-	margin-bottom: 1rem;
-}
-.my-2 {
-	margin-top: 0.5rem;
-	margin-bottom: 0.5rem;
-}
 .my-1\.5 {
 	margin-top: 0.375rem;
 	margin-bottom: 0.375rem;
@@ -669,9 +670,9 @@ video {
 	margin-top: 0.25rem;
 	margin-bottom: 0.25rem;
 }
-.mx-16 {
-	margin-left: 4rem;
-	margin-right: 4rem;
+.my-4 {
+	margin-top: 1rem;
+	margin-bottom: 1rem;
 }
 .mb-0\.5 {
 	margin-bottom: 0.125rem;
@@ -727,35 +728,14 @@ video {
 .ml-\[1px\] {
 	margin-left: 1px;
 }
-.mt-10 {
-	margin-top: 2.5rem;
-}
-.mt-1 {
-	margin-top: 0.25rem;
-}
-.mb-1 {
-	margin-bottom: 0.25rem;
+.mr-1 {
+	margin-right: 0.25rem;
 }
 .mb-2 {
 	margin-bottom: 0.5rem;
 }
-.-mt-1 {
-	margin-top: -0.25rem;
-}
-.-mt-1\.5 {
-	margin-top: -0.375rem;
-}
-.-mt-3 {
-	margin-top: -0.75rem;
-}
-.mt-6 {
-	margin-top: 1.5rem;
-}
-.mr-1 {
-	margin-right: 0.25rem;
-}
-.mb-8 {
-	margin-bottom: 2rem;
+.mt-10 {
+	margin-top: 2.5rem;
 }
 .block {
 	display: block;
@@ -799,6 +779,9 @@ video {
 .h-\[40px\] {
 	height: 40px;
 }
+.\!h-9 {
+	height: 2.25rem !important;
+}
 .w-\[7px\] {
 	width: 7px;
 }
@@ -828,11 +811,6 @@ video {
 .w-16 {
 	width: 4rem;
 }
-.w-\[max-content\] {
-	width: -webkit-max-content;
-	width: -moz-max-content;
-	width: max-content;
-}
 .w-max {
 	width: -webkit-max-content;
 	width: -moz-max-content;
@@ -855,9 +833,6 @@ video {
 }
 .max-w-xs {
 	max-width: 20rem;
-}
-.max-w-\[16rem\] {
-	max-width: 16rem;
 }
 .max-w-\[260px\] {
 	max-width: 260px;
@@ -975,15 +950,11 @@ video {
 }
 .border-gray-200 {
 	--tw-border-opacity: 1;
-	border-color: rgba(229, 231, 235, var(--tw-border-opacity));
+	border-color: rgba(229, 229, 229, var(--tw-border-opacity));
 }
 .border-gray-300 {
 	--tw-border-opacity: 1;
-	border-color: rgba(209, 213, 219, var(--tw-border-opacity));
-}
-.bg-yellow-400 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(251, 191, 36, var(--tw-bg-opacity));
+	border-color: rgba(212, 212, 212, var(--tw-border-opacity));
 }
 .bg-\[\#00A5EC\] {
 	--tw-bg-opacity: 1;
@@ -993,9 +964,9 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
 }
-.bg-yellow-500 {
+.bg-orange-400 {
 	--tw-bg-opacity: 1;
-	background-color: rgba(245, 158, 11, var(--tw-bg-opacity));
+	background-color: rgba(251, 146, 60, var(--tw-bg-opacity));
 }
 .bg-black {
 	--tw-bg-opacity: 1;
@@ -1003,7 +974,7 @@ video {
 }
 .bg-gray-800 {
 	--tw-bg-opacity: 1;
-	background-color: rgba(31, 41, 55, var(--tw-bg-opacity));
+	background-color: rgba(38, 38, 38, var(--tw-bg-opacity));
 }
 .bg-opacity-\[0\.4\] {
 	--tw-bg-opacity: 0.4;
@@ -1059,14 +1030,6 @@ video {
 	padding-top: 0.25rem;
 	padding-bottom: 0.25rem;
 }
-.px-3\.5 {
-	padding-left: 0.875rem;
-	padding-right: 0.875rem;
-}
-.px-3 {
-	padding-left: 0.75rem;
-	padding-right: 0.75rem;
-}
 .py-0\.5 {
 	padding-top: 0.125rem;
 	padding-bottom: 0.125rem;
@@ -1082,6 +1045,10 @@ video {
 .px-\[18px\] {
 	padding-left: 18px;
 	padding-right: 18px;
+}
+.py-\[1px\] {
+	padding-top: 1px;
+	padding-bottom: 1px;
 }
 .py-\[2px\] {
 	padding-top: 2px;
@@ -1119,13 +1086,9 @@ video {
 	padding-left: 0.625rem;
 	padding-right: 0.625rem;
 }
-.py-\[1\.6px\] {
-	padding-top: 1.6px;
-	padding-bottom: 1.6px;
-}
-.py-\[1px\] {
-	padding-top: 1px;
-	padding-bottom: 1px;
+.px-3 {
+	padding-left: 0.75rem;
+	padding-right: 0.75rem;
 }
 .pb-3 {
 	padding-bottom: 0.75rem;
@@ -1145,11 +1108,11 @@ video {
 .pb-6 {
 	padding-bottom: 1.5rem;
 }
-.pb-4 {
-	padding-bottom: 1rem;
-}
 .pt-4 {
 	padding-top: 1rem;
+}
+.pb-4 {
+	padding-bottom: 1rem;
 }
 .text-center {
 	text-align: center;
@@ -1220,11 +1183,11 @@ video {
 }
 .text-gray-700 {
 	--tw-text-opacity: 1;
-	color: rgba(55, 65, 81, var(--tw-text-opacity));
+	color: rgba(64, 64, 64, var(--tw-text-opacity));
 }
 .text-gray-600 {
 	--tw-text-opacity: 1;
-	color: rgba(75, 85, 99, var(--tw-text-opacity));
+	color: rgba(82, 82, 82, var(--tw-text-opacity));
 }
 .text-\[\#00A5EC\] {
 	--tw-text-opacity: 1;
@@ -1236,27 +1199,27 @@ video {
 }
 .text-gray-300 {
 	--tw-text-opacity: 1;
-	color: rgba(209, 213, 219, var(--tw-text-opacity));
+	color: rgba(212, 212, 212, var(--tw-text-opacity));
 }
 .text-gray-500 {
 	--tw-text-opacity: 1;
-	color: rgba(107, 114, 128, var(--tw-text-opacity));
+	color: rgba(115, 115, 115, var(--tw-text-opacity));
 }
 .text-green-600 {
 	--tw-text-opacity: 1;
-	color: rgba(5, 150, 105, var(--tw-text-opacity));
+	color: rgba(22, 163, 74, var(--tw-text-opacity));
 }
 .text-\[\#484848\] {
 	--tw-text-opacity: 1;
 	color: rgba(72, 72, 72, var(--tw-text-opacity));
 }
-.text-gray-200 {
-	--tw-text-opacity: 1;
-	color: rgba(229, 231, 235, var(--tw-text-opacity));
-}
 .text-gray-800 {
 	--tw-text-opacity: 1;
-	color: rgba(31, 41, 55, var(--tw-text-opacity));
+	color: rgba(38, 38, 38, var(--tw-text-opacity));
+}
+.text-gray-200 {
+	--tw-text-opacity: 1;
+	color: rgba(229, 229, 229, var(--tw-text-opacity));
 }
 .shadow-md {
 	--tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
@@ -1268,10 +1231,6 @@ video {
 }
 .shadow {
 	--tw-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
-	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-.shadow-sm {
-	--tw-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
 	box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1304,13 +1263,13 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(0, 139, 220, var(--tw-bg-opacity));
 }
-.hover\:text-\[\#008BDC\]:hover {
-	--tw-text-opacity: 1;
-	color: rgba(0, 139, 220, var(--tw-text-opacity));
-}
 .hover\:text-\[\#00A5EC\]:hover {
 	--tw-text-opacity: 1;
 	color: rgba(0, 165, 236, var(--tw-text-opacity));
+}
+.hover\:text-\[\#008BDC\]:hover {
+	--tw-text-opacity: 1;
+	color: rgba(0, 139, 220, var(--tw-text-opacity));
 }
 .hover\:shadow-lg:hover {
 	--tw-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
@@ -1452,7 +1411,7 @@ video {
 
 	.md\:text-gray-700 {
 		--tw-text-opacity: 1;
-		color: rgba(55, 65, 81, var(--tw-text-opacity));
+		color: rgba(64, 64, 64, var(--tw-text-opacity));
 	}
 
 	.md\:text-black {
@@ -1492,10 +1451,6 @@ video {
 		display: block;
 	}
 
-	.lg\:inline-block {
-		display: inline-block;
-	}
-
 	.lg\:hidden {
 		display: none;
 	}
@@ -1522,14 +1477,6 @@ video {
 
 	.lg\:justify-center {
 		justify-content: center;
-	}
-
-	.lg\:gap-4 {
-		gap: 1rem;
-	}
-
-	.lg\:gap-12 {
-		gap: 3rem;
 	}
 
 	.lg\:overflow-x-auto {
